[package]
name = "pgbackup"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
color-eyre = "0.6.3"
tokio = { version = "1.40.0", features = ["macros", "process", "rt", "time"] }
tokio-postgres = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
