[package]
name = "pgbackup"
version = "0.1.0"
edition = "2021"

[dependencies]
aws-config = "1.5.5"
aws-sdk-s3 = "1.48.0"
chrono = "0.4.38"
color-eyre = "0.6.3"
flate2 = "1.0.33"
tokio = { version = "1.40.0", features = ["macros", "process", "rt", "time"] }
tokio-postgres = "0.7.11"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
